Update index.html to load stylesheet

--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -2,8 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cryptonit Cloud</title>
+
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
+    <div id="wrapper">
+    </div>
+    <script src="js/vendor.bundle.js"></script>
+    <script src="js/bundle.js"></script>
   </body>
 </html>
