Copy over source and make some changes

--- a/src/main/yarn/src/html/index.html
+++ b/src/main/yarn/src/html/index.html
@@ -7,5 +7,6 @@
 {% extends 'layouts/application.html' %}
 
 {% block content %}
-  <h1 data-module="example">{{ message }}</h1>
+  <div id="root" style="height: 100%" class="some-class"></div>
+  <div id="initial-loader"></div>
 {% endblock %}
